# ascend-sdk-python

./: .build-timestamp  .dockerignore  .env  .env.backup-20251027-102237  .env.backup-SEC-001-20251027-094941  .env.backup-local  .env.bak  .env.example  .env.production  .env.rds_backup.COMPROMISED-DELETE-AFTER-GIT-CLEANUP  .gitignore  .in.swp  .pre-commit-config.yaml  AB_TESTING_COMPLETE_ENTERPRISE_SOLUTION.md  AB_TESTING_ENTERPRISE_FIX_PLAN.md  AB_TESTING_ENTERPRISE_IMPLEMENTATION_COMPLETE.md  AB_TESTING_FIX_DEPLOYMENT_COMPLETE.md  AB_TESTING_REAL_DATA_FIXES.md  AB_TESTING_REAL_METRICS_AND_AUTO_COMPLETION_COMPLETE.md  ACTIVITY_TAB_COMPREHENSIVE_AUDIT.md  ACTIVITY_TAB_ENTERPRISE_ASSESSMENT.md  ACTIVITY_TAB_ENTERPRISE_FIX_PLAN.md  ACTIVITY_TAB_PHASE1_DEPLOYMENT_COMPLETE.md  ACTIVITY_TAB_PHASE2_AUDIT.md  ACTIVITY_TAB_PHASE2_COMPLETE.md  ACTIVITY_TAB_PHASE2_IMPLEMENTATION_PLAN.md  ADD_TO_CLAUDE_PROJECT.md  AGENT_ACTION_CREATION_ENTERPRISE_FIX.md  AGENT_ACTION_CREATION_FIX_COMPLETE.md  AI_ALERT_ALL_FIXES_DEPLOYED.md  AI_ALERT_COMPREHENSIVE_FIX_PLAN.md  AI_ALERT_ISSUES_INVESTIGATION.md  AI_ALERT_MANAGEMENT_ENTERPRISE_SOLUTION.md  AI_ALERT_MANAGEMENT_FIX_DEPLOYED.md  AI_INSIGHTS_AND_COST_SAVINGS_COMPREHENSIVE_AUDIT.md  AI_INSIGHTS_FIX_DOCUMENTATION.md  AI_INSIGHTS_PERFORMANCE_METRICS_PHASE1_COMPLETE.md  AI_INSIGHTS_REAL_DATA_IMPLEMENTATION.md  AI_RECOMMENDATIONS_ENTERPRISE_AUDIT_AND_PLAN.md  AI_RULE_ENGINE_AB_TESTING_ENHANCEMENT.md  (+509 more)
.claude/: current_state.md  session_history.json  status_dashboard.md
.devcontainer/: devcontainer.json
.github/: .gitkeep
ARCHIVED_CODE_20251121_BANKING_LEVEL_AUTH/: ARCHIVE_DOCUMENTATION.md
MASTER_PROMPT_SUCCESS_85_PILOT_READY_20250817_134037/: .env_MASTER_PROMPT
WORKING_BACKUP_20251016_202731/: BACKUP_INFO.txt
ZIp file of last working backup /: enterprise_auth.py  rotation_audit_log.json
alembic/: env.py
ascend/: __init__.py  client.py  constants.py  exceptions.py  mcp.py  models.py
ascend-docs/: sidebars.ts
ascend-envoy-authz/: Dockerfile  Makefile  go.mod
ascend_wrapper_test/: test_governance.py
audit-results/: 3_SECURITY_AUDIT.md  ENTERPRISE_SECURITY_REMEDIATION_PLAN.md  EXECUTIVE_SUMMARY.md  PHASE2_PRE_IMPLEMENTATION_AUDIT.md  PRE_IMPLEMENTATION_AUDIT.md
backup files /: COOKIE  add_health_endpoint.sh  add_missing_enterprise_endpoints.sh  analyze_comprehensive_candidates.sh  automated_railway_master_prompt_fix.sh  backend_database_fix.sh  complete_auth_fix.sh  cookies.txt  deep_comprehensive_dashboard_search.sh  direct_code_inspector.sh  emergency_railway_fix.sh  enterprise_cookie_integration_fix.sh  enterprise_surgical_fix.sh  extract_working_versions.sh  final_destructuring_cleanup.sh  find_backend_files.sh  fix_app_jsx_loop.sh  fix_auth_format_mismatch.sh  fix_auth_loop.sh  fix_auth_parsing_issue.sh  fix_bearer_token_conflict.sh  fix_duplicate_credentials.sh  fix_duplicate_exports.sh  fix_frontend_file_path.sh  force_railway_deployment.sh  manual_dashboard_analysis.sh  master_prompt_deployment.sh  nuclear_loop_stop.sh  quick_form_import_fix.sh  railway_git_deployment_fix.sh  railway_healthcheck_fix.sh  railway_startup.py  requirements.txt  restore_original_dashboard_plan.sh  rollback_step2_cookie_auth.py  setup_production_identical_env.sh  start_production_local.py  step2_cookie_auth_report_20250817_005533.json  step2_migration.py  surgical_themeprovider_fix.sh  (+1 more)
codebase-review/: API-ENDPOINTS.md  COMPLETE-PLATFORM-REVIEW.md  COMPREHENSIVE-REVIEW-REPORT.md  DEMO-PREPARATION-PROMPT.md  FEATURE-INVENTORY.md  FINDINGS-AND-EVIDENCE.md  FIX-INSTRUCTIONS.md  FIXES-APPLIED.md  README.md  comprehensive_test.sh  convert-reviews-to-html-pdf.sh  create-pdfs-with-chrome.sh  create_missing_tables.py
core/: config.py  security.py
docs/: ALERT_ORCHESTRATION_LOGIC.md  CUSTOMER_INTEGRATION_ARCHITECTURE.md  CUSTOMER_INTEGRATION_GUIDE.md  SYSTEM_AUDIT_REPORT.txt  all_functions.txt  models_content.txt
enterprise-docs/: README.md  admin_guide.html  admin_guide.md  api.html  api.md  architecture.html  architecture.md  index.html  product_overview.html  product_overview.md  security_compliance.html  security_compliance.md  user_guide.html  user_guide.md
enterprise-testing-environment/: ACCESS_GUIDE.md  CLIENT_DEMO_APPROVAL_WORKFLOW.md  CLIENT_EVIDENCE_BLOCKED_ACTION.md  CODE_REVIEW_SUMMARY.md  DELIVERY_SUMMARY.md  DEPLOYMENT_CONFIRMATION.md  DEPLOYMENT_STATUS_OPTION3_PHASE1.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VERIFICATION_20251119.md  ENTERPRISE_FIX_PLAN.md  ENTERPRISE_ONBOARDING_GUIDE.md  EXECUTIVE_SUMMARY.md  FINAL_DEPLOYMENT_SUMMARY.md  FINDINGS_SUMMARY.md  FRONTEND_COMPATIBILITY_ANALYSIS.md  IMPLEMENTATION_PLAN.md  INDEX.md  INVESTIGATION_REPORT.md  INVESTIGATION_REPORT_ACTION_BLOCKING.md  OPTION3_ENTERPRISE_SOLUTION_WITH_AUDIT.md  OPTION3_PHASE1_DEPLOYMENT_SUMMARY.md  OPTION3_PHASE1_DEPLOYMENT_VERIFIED.md  PRODUCTION_REVIEW_AND_FIX_PLAN.md  PR_DESCRIPTION.md  QUICK_TEST_GUIDE.md  README.md  TESTING_PHASE_REVIEW_REPORT.md  WHAT_FIXES_ENABLE.md  check_app_status.sh  check_infrastructure_status.sh  comprehensive_audit.sh  deny_action_728.sh  investigate_actions.sh  production_assessment.sh  show_blocked_action.sh  test_diverse_actions.sh  verify_blocked_action.sh
enterprise_analysis_20250817_054959/: backend_analysis.txt  project_structure.txt
enterprise_build/: DAY2_COMPLETE_SUMMARY.md  DAY3_COMPLETION_REPORT.md  DAY3_DEPLOYMENT_STATUS.md  DAY3_HOTFIX_SUMMARY.md  ENTERPRISE_MULTI_TENANCY_PLAN.md  MASTER_IMPLEMENTATION_PLAN.md  PHASE1_EXECUTIVE_SUMMARY.md  PHASE1_MIGRATION_READY.md  (+9 more)
owkai-sdk/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
owkai-sdk/owkai/: __init__.py  auth.py  boto3_patch.py  client.py  exceptions.py  models.py
owkai-sdk/owkai/utils/: __init__.py  logging.py  retry.py
owkai-sdk/tests/: __init__.py  conftest.py  test_auth.py  test_boto3_patch.py  test_client.py
sdk/python/: CHANGELOG.md  README.md  owkai_client.py  pyproject.toml
sdk/python/owkai_sdk/: __init__.py  agent.py  client.py  exceptions.py  mcp.py  models.py
sdk/python/tests/: __init__.py  test_client.py  test_mcp.py
(+1832 files in other folders)
