[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascend-sdk"
version = "2.0.0"
description = "ASCEND SDK - Enterprise AI Governance with fail mode, circuit breaker, and MCP integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ASCEND by OW-AI", email = "support@ascendowkai.com"}
]
maintainers = [
    {name = "ASCEND by OW-AI", email = "support@ascendowkai.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
keywords = [
    "ai",
    "authorization",
    "governance",
    "enterprise",
    "security",
    "compliance",
    "soc2",
    "hipaa",
    "pci-dss",
    "mcp",
    "circuit-breaker",
    "fail-mode"
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "python-dotenv>=0.19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0"
]
async = [
    "aiohttp>=3.8.0"
]

[project.urls]
Homepage = "https://ascendowkai.com"
Documentation = "https://docs.ascendowkai.com/sdk/python"
Repository = "https://github.com/anthropics/ascend-sdk-python"
Issues = "https://github.com/anthropics/ascend-sdk-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["owkai_sdk*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
